<resources>
    <string name="app_name">WelFit</string>
    <!--    Login Screen strings-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_remember_me">Remember Me</string>
    <string name="sign_up_cta">Not a member? <a href="welfit://signup"><b>Sign Up</b></a></string>
    <string name="invalid_login_email">Email not recognised!</string>
    <string name="invalid_login_password">Incorrect password!</string>
    <string name="no_database">No user database found!</string>
    <!--    Sign Up Screen strings-->
    <string name="sign_up_first_name">Enter First Name</string>
    <string name="sign_up_last_name">Enter Last Name</string>
    <string name="sign_up_email">Enter Email</string>
    <string name="sign_up_password">Enter Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <!--    Landing page strings-->
    <string name="reservations">Reservations</string>
    <string name="dashboard">Dashboard</string>
    <string name="exercises">Exercises</string>
    <string name="membership">Membership</string>
    <string name="contactus">Contact Us</string>
    <!--    Reservation strings-->
    <!--    Dashboard strings-->
    <string name="weight_graph">A line graph to track the users weight changes over time would go here.</string>
    <string name="calendar">A calendar would go here that could be used to track class reservations and personal trainer appointments.</string>
    <string name="inbox">Messages to/from gym administration or personal trainers regarding reservations etc would go here.</string>
    <!--    Exercises strings-->
    <string name="exercise_filters">Filters\n<a href="welfit://ex_chest">Chest</a> - <a href="welfit://ex_shoulders">Shoulders</a> - <a href="welfit://ex_back">Back</a> - <a href="welfit://ex_quads">Quads</a> - <a href="welfit://ex_triceps">Triceps</a> - <a href="welfit://ex_biceps">Biceps</a></string>
    <!--    Membership strings-->
    <string name="membership_info">Membership information would be stored here. Including:\nMembership price, billing history, billing account number.\n\nFunctionality to change app password would also be included.</string>
    <!--    Contact Us strings-->
    <string name="contact_us_info">Contact methods would be displayed here including:\nSocial media links, email address, phone number and a form to submit a query.</string>
    <!--    Stopwatch strings-->
    <string name="stopwatch">A functioning stopwatch would be implemented on this activity to provide the user the ability to time themselves when completing exercises such as abdominal planks.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>