...
        android:textColor="#D8D7D7"
        android:buttonTint="#D8D7D7"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="#127F8B"
        android:layout_gravity="center"
...
