<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/landingPage">

    <Button
        android:id="@+id/btn_reservations"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
...
